--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "classnames": "^2.3.2",
+    "jotai": "^2.0.4",
+    "lodash": "^4.17.21",
     "next": "^13.2.4",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
@@ -22,6 +26,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.21.3",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
