--- a/package.json
+++ b/package.json
@@ -9,19 +9,31 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^1.2.1",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "ai": "^2.2.12",
+    "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
+    "framer-motion": "^10.16.4",
     "jotai": "^2.0.4",
+    "jotai-location": "^0.5.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.188.0",
     "next": "^13.2.4",
-    "openai": "^3.2.1",
+    "openai": "^4.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
+    "tilg": "^0.1.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -31,6 +43,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/tailwindcss": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
