--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.1",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@upstash/redis": "^1.22.0",
     "ai": "^2.2.12",
     "class-variance-authority": "^0.6.0",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "framer-motion": "^10.16.4",
+    "hasha": "^5.2.2",
     "jotai": "^2.0.4",
     "jotai-location": "^0.5.1",
     "lodash": "^4.17.21",
