--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jotai-location": "^0.5.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.188.0",
+    "mixpanel-browser": "^2.47.0",
     "next": "^13.2.4",
     "openai": "^4.6.0",
     "react": "18.2.0",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/eslint": "^8.21.3",
     "@types/lodash": "^4.14.194",
+    "@types/mixpanel-browser": "^2.47.1",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
